resources/home.css
.home .content-full-width {
    background-image: url("./pics/background-jasper2.jpg");
    background-position: 0 15%;
    padding-top: 1.5rem;
}

.home,
.home nav,
.home .floating-blurb {
	background-color: #dee7f1;
}

.home .floating-blurb {
    display: flex;
}

.home .floating-blurb .description-paragraphs {
	margin-right: .5rem;
}

/*--------------------- MEDIA QUERIES ---------------------*/
/* for changing window size */
/* GO FULL WIDTH AT LESS THAN 800 PIXELS */
@media only screen and (max-width: 800px) {
    .home .content-full-width .floating-blurb {
        flex-wrap: wrap;
        width: calc(85% - 2rem);;
    }
}

